--- a/src/main/resources/app/src/app/register/register.component.html
+++ b/src/main/resources/app/src/app/register/register.component.html
@@ -27,6 +27,6 @@
   <div *ngFor="let error of errors" class="warning">
     {{error}}
   </div>
-  <button (click)=registerClient() class="btn btn-success">Register</button>
+  <button (click)=registerUser() class="btn btn-success">Register</button>
   <div><a routerLink="/login" class="nav-link">Login</a></div>
 </div>
